src/objects/EmployeeSkill__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Time__c</fullName>
        <label>Assigned Time</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Skills</relationshipLabel>
        <relationshipName>EmployeeSkills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Tester</fullName>
                </value>
                <value>
                    <fullName>Team Lead</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Project Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Employee Skills r</relationshipLabel>
        <relationshipName>EmployeeSkills</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>EmployeeSkill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>EmployeeSkills Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EmployeeSkills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assigned_Time</fullName>
        <active>true</active>
        <errorConditionFormula>Assigned_Time__c &gt; 8 ||  Assigned_Time__c &lt; 1</errorConditionFormula>
        <errorDisplayField>Assigned_Time__c</errorDisplayField>
        <errorMessage>Error - must be 1-8 h.</errorMessage>
    </validationRules>
</CustomObject>